--- a/demo-ng/src/app/app.component.html
+++ b/demo-ng/src/app/app.component.html
@@ -1,6 +1,8 @@
+<app-header />
 <app-notification />
+<app-notification-modal />
+<app-ajax-wait />
 <main class="container-fluid">
-  <app-demos />
+  <router-outlet />
 </main>
-
-<router-outlet />
+<app-footer />
