new sakila front end project with actores resource

--- a/demo-ng/src/app/contactos/tmpl-list.component.html
+++ b/demo-ng/src/app/contactos/tmpl-list.component.html
@@ -3,9 +3,9 @@
     <tr class="table-info">
     <th class="display-4">Lista de contactos</th>
     <th class="text-end">
-    @if (VM.auth.isAutenticated) {
+<!--     @if (VM.auth.isAutenticated) { -->
     <button class="btn btn-success" routerLink="add"><i class="fas fa-plus"></i> Añadir</button>
-    }
+ <!--    } -->
     </th>
     </tr>
     </thead>
