language resource created, in progress. Readme added

--- a/sakila/src/app/main/header/header.component.html
+++ b/sakila/src/app/main/header/header.component.html
@@ -17,7 +17,8 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item"><a class="nav-link" data-bs-dismiss="offcanvas" routerLinkActive="active" routerLink="/inicio"><i class="fa-solid fa-house"></i> inicio</a></li>
-            <li class="nav-item"><a class="nav-link" [routerLink]="['/contactos']" routerLinkActive="active">actores</a></li>
+            <li class="nav-item"><a class="nav-link" [routerLink]="['/actores']" routerLinkActive="active">actores</a></li>
+            <li class="nav-item"><a class="nav-link" [routerLink]="['/idiomas']" routerLinkActive="active">idiomas</a></li>
           </ul>
           <app-login />
         </div>
