--- a/sakila/src/app/idiomas/tmpl-list.component.html
+++ b/sakila/src/app/idiomas/tmpl-list.component.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover">
     <thead>
     <tr class="table-info">
-    <th class="display-4">Lista de actores</th>
+    <th class="display-4">Lista de idiomas</th>
     <th class="text-end">
 <!--     @if (VM.auth.isAutenticated) { -->
     <button class="btn btn-success" routerLink="add"><i class="fas fa-plus"></i> Añadir</button>
@@ -15,15 +15,12 @@
     <td>
     <div class="container">
     <div class="row">
-    <div class="col-md-2">
-    <img class="rounded-circle float-left" src="{{item.avatar ?? (item.sexo === 'H' ? '/assets/user-notfound-male.png' : '/assets/user-not-found-female.png') }}"
-    alt="Foto de {{item.nombre}} {{item.apellidos}}" width="75" height="75">
-    </div>
+    
     <div class="col-md-10">
     <a class="btn btn-link btn-lg px-0" routerLink="{{item.id}}/{{item.nombre}}-{{item.apellidos}}">
     {{item.tratamiento}} {{item.nombre}} {{item.apellidos}}</a>
     <br>
-    <b>Tlfn.:</b> {{item.telefono}} <b>Correo:</b> {{item.email}}
+    <b>Idioma:</b> {{item.idioma}}
     </div>
     </div>
     </div>
